  EntityDbConnection.selectMany(), selectPropertyValues() and selectRowCount() changed to take the above into account
  EntityDbConnectionTest improved
  ProfilingModel/Panel improvements
  ServerMonitor improvements
  TextBeanPropertyLink now synchronizes document during setUIPropertyValue()
  EntityTableModel.getSelectedView/ModelIndexes() now return Collection<Integer> instead of int[]
  EntityTableModel.add/setSelectedItemIndexes() now takes List<Integer> as parameter
  EntityDbRemoteServer no longer keeps a reference to the Registry
  ServerMonitor improved
  Configuration.getIntValue() added
  PetstoreTest and EmpDeptTest now use createEntity() exclusively
  ClientInfo.clientHost field added
  Configuration.SERVER_LOGGING_STATUS renamed to SERVER_CLIENT_LOGGING_ENABLED, property name changed to jminor.server.clientLoggingEnabled
  Configuration.SERVER_CONNECTION_SECURE renamed to SERVER_CONNECTION_SSL_ENABLED, property name changed to jminor.server.connection.sslEnabled
  Configuration.SERVER_POOLING_INITIAL renamed to SERVER_CONNECTION_POOLING_INITIAL
  EmpDeptProfiling now performs updates as well as selects
  EntityDbConnectionTest refactored
  PropertySearchModel.toString(Object) bug that prevented proper search state string functionality fixed
  EntityRepository.isPrimaryKeyAutoGenerated() added
  EntityEditModel null validation did not handle non-auto generated primary keys
  UiUtil.setWaitCursor() now works with multiple frames/dialogs
  Unit tests migrated to Junit 4
  EntityTableModel.setSortingStatus() simplified
0.5
  EntityTablePanel.showColumn() refactored
  framework.client.ui.property renamings
  IntArray removed
  UserCancelException renamed to CancelException
  Event objects privatized behind a eventXXX() method
  DateUtil.floorDate() added
  Unit test coverage improved somewhat
0.5.1
  EntityTableSearchModel.getSearchCriteriaConjunction() renamed to getSearchConjunction()
  Unit test coverage improved
  EntityDbConnectionPoolTest added